--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "express": "^4.14.0",
     "mongoose": "^4.7.6",
-    "nconf": "^0.8.4"
+    "nconf": "^0.8.4",
+    "winston": "^2.3.0"
   }
 }
