--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "hazratgs",
   "license": "ISC",
   "dependencies": {
+    "app-root-path": "^2.0.1",
     "express": "^4.14.0",
     "mongoose": "^4.7.6",
     "mongoose-url-slugs": "^0.2.1",
