--- a/admin/package.json
+++ b/admin/package.json
@@ -33,9 +33,12 @@
   "dependencies": {
     "babel-polyfill": "^6.20.0",
     "babel-runtime": "^6.20.0",
+    "helmet": "^3.4.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-helmet": "^4.0.0",
     "react-redux": "^5.0.2",
+    "react-router": "^3.0.2",
     "redux": "^3.6.0",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.2.0"
