--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "nconf": "^0.8.4",
     "node-telegram-bot-api": "^0.25.0",
     "winston": "^2.3.0"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.2.0"
   }
 }
